--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         <a href="./public/My Movie ranking project.html"><h3>My Movie Ranking Project</h3></a>
         <img src="./assets/images/Movie Rankin Project Pic.PNG" width="500" height="auto">
 
-        <a href="./public/maolid invite.html">My Maolid Invite Project</a>
+        <a href="./public/maolid invite.html"><h3>My Maolid Invite Project</h3></a>
         <img src="./assets/images/Maolid Invite Project O pic.PNG" width="500" height="auto">
         
 
